add node-fetch module

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "file-type": "^18.2.1",
     "googleapis": "^116.0.0",
     "mongoose": "^6.8.3",
+    "node-fetch": "^3.3.1",
     "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
