--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "config": "^3.3.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "fetch": "^1.1.0",
     "file-type": "^18.2.1",
     "googleapis": "^116.0.0",
     "mongoose": "^6.8.3",
-    "node-fetch": "^3.3.1",
     "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
