--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "lint": "eslint server.js && eslint my_modules/. && eslint models/.",
+    "lint:fix": "eslint server.js --fix && eslint my_modules/. --fix && eslint models/. --fix"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,11 @@
     "node-telegram-bot-api": "^0.61.0"
   },
   "devDependencies": {
+    "eslint": "^8.46.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "^2.0.20"
+  },
+  "engines": {
+    "node": "v18.15.0"
   }
 }
